--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -202,13 +202,15 @@ hr {
 }
 
 .my-prose li {
-    @apply mb-1;
+    @apply mb-2 tablet:mb-1;
+}
+
+.my-prose ul li:first-child {
+    @apply mt-2 tablet:mt-1;
 }
 
 .my-prose li:not(.task-list-item) {
     list-style-type: disc;
-    /* list-style-position: inside; */
-    /* margin-left: 0.25rem; */
 }
 
 .my-prose li.task-list-item > input {
