--- a/src/components/ServerValue.astro
+++ b/src/components/ServerValue.astro
@@ -1,4 +1,6 @@
 ---
+export const prerender = false;
+
 import Identity from "@/components/Identity.astro";
 import { StravaGateway } from "@/lib/strava";
 
