--- a/src/components/ServerValue.astro
+++ b/src/components/ServerValue.astro
@@ -1,23 +1,17 @@
 ---
-export const prerender = false;
-
-import Identity from "@/components/Identity.astro";
 import { StravaGateway } from "@/lib/strava";
 
 export interface Props {
   name: "stravaYtdMiles" | "test";
-  fallback?: string;
 }
 
-const { name, fallback: propFallback } = Astro.props;
+const { name } = Astro.props;
 
 let getValue: () => Promise<string | number> = async () => "Heck :/";
-let fallback = propFallback ?? "Loading...";
 
 switch (name) {
   case "stravaYtdMiles":
     getValue = StravaGateway.getYtdMiles;
-    fallback = "Checking Strava...";
     break;
   case "test":
     getValue = async () => "Ayyyyy :D";
@@ -29,6 +23,4 @@ switch (name) {
 const value = await getValue().catch(() => "[fetch error]");
 ---
 
-<Identity server:defer value={value}>
-  <Fragment slot="fallback">{fallback}</Fragment>
-</Identity>
+{value}
