--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -11,24 +11,15 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 
 <script>
   // This script runs on the client after the page loads.
-  function uncheckAllCheckboxes() {
-    // Select all input elements with the type "checkbox"
+  function softDisableAllDisabledCheckboxes() {
     const checkboxes = document.querySelectorAll('input[type="checkbox"]');
-
-    console.log(checkboxes);
-
-    // Loop through the NodeList and uncheck each one
     checkboxes.forEach((checkbox) => {
       (checkbox as HTMLInputElement).disabled = false;
       (checkbox as HTMLInputElement).classList.add("my-disabled");
     });
   }
 
-  uncheckAllCheckboxes();
-
-  // document.addEventListener("astro:page-load", () => {
-  //   uncheckAllCheckboxes();
-  // });
+  softDisableAllDisabledCheckboxes();
 </script>
 
 <Layout>
